# homework_cicd

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: main.yml
fixtures/: products.json  stock-product.json  stocks.json
logistic/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
stocks_products/: settings.py
